vlib/v/checker/tests/var_duplicate_const.vv
module main

const (
	age = 40
)

fn main() {
	age := 30
	println(age)
}
